# Mycelium_Arduino_Lib

./: Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
arduino/firmware/gateway_firmware/: gateway_firmware.ino
arduino/firmware/node_firmware/: node_firmware.ino
arduino/libraries/MyceliumSensor/: MyceliumSensor.cpp  MyceliumSensor.h
arduino/libraries/MyceliumSensor/examples/: BasicCollection.ino
cpp-core/: CMakeLists.txt
cpp-core/include/mycelium/: dsp.hpp  io.hpp  lang.hpp  utils.hpp
cpp-core/src/: dsp.cpp  io.cpp  lang.cpp  utils.cpp
cpp-core/tests/: test_dsp.cpp  test_io.cpp  test_lang.cpp  test_utils.cpp
docs/: api_reference.md  hardware_guide.md  setup.md
python/: __init__.py
python/mycelium/: __init__.py  adamatzky.py  core.py  language.py  sensors.py
python/mycelium/models/: __init__.py  bitnet_decoder.py  env_context.py  species_classifier.py
python/scripts/: data_collection.py  real_time_decode.py  train_models.py
python/tests/: test_adamatzky.py  test_core.py  test_models.py
rust-core/: Cargo.toml
rust-core/mycelium-dsp/: Cargo.toml
rust-core/mycelium-dsp/src/: filters.rs  lib.rs  preprocessing.rs  spike_detection.rs
rust-core/mycelium-io/: Cargo.toml
rust-core/mycelium-io/src/: lib.rs  lorawan.rs  protocols.rs  serial.rs
rust-core/mycelium-lang/: Cargo.toml
rust-core/mycelium-lang/src/: complexity.rs  lib.rs  state_machines.rs  word_extraction.rs
rust-core/mycelium-python/: Cargo.toml
rust-core/mycelium-python/src/: bindings.rs  conversions.rs  lib.rs
